Bug 255661 - Konqueror shows message boxes with error in the infinite loop when searching inside the DevExpress support center
Summary: Konqueror shows message boxes with error in the infinite loop when searching ...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.4.5
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-30 12:01 UTC by DIESEL
Modified: 2010-11-01 18:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description DIESEL 2010-10-30 12:01:02 UTC
Version:           4.4.5 (using KDE 4.4.5) 
OS:                Linux

First, message boxes with error are shown
Second, there is no way to continue working with the Konqueror, only killing the process helps

Reproducible: Always

Steps to Reproduce:
Enter http://www.devexpress.com/Support/Center/ and try to search for something

Actual Results:  
Message boxes with errors are shown

Expected Results:  
No errors, but search results
Comment 1 Maksim Orlovich 2010-11-01 18:03:27 UTC
SVN commit 1191996 by orlovich:

Make sure to give global constructors like Object, String, etc., global names, since at least one 
crazily overengineered marshalling system uses them as keys.

Fixes search on devexpress.com support center.

BUG: 255661
FIXED-IN: 4.5.3


 M  +23 -15    interpreter.cpp  
 M  +3 -0      interpreter.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191996
Comment 2 Maksim Orlovich 2010-11-01 18:04:45 UTC
SVN commit 1191998 by orlovich:

Regression test for #255661 

CCBUG: 255661 


 M  +21 -0     inbuilt_function_tostring.js  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191998
Comment 3 Maksim Orlovich 2010-11-01 18:05:40 UTC
SVN commit 1191999 by orlovich:

Merged revision:r1191996 | orlovich | 2010-11-01 13:04:04 -0400 (Mon, 01 Nov 2010) | 8 lines

Make sure to give global constructors like Object, String, etc., global names, since at least one 
crazily overengineered marshalling system uses them as keys.

Fixes search on devexpress.com support center.

BUG: 255661
FIXED-IN: 4.5.3

 M  +23 -15    interpreter.cpp  
 M  +3 -0      interpreter.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1191999
Comment 4 Christoph Feck 2010-11-01 18:12:08 UTC
4.5.3 has already been tagged -> fixed for 4.5.4.