Make sure to give global constructors like Object, String, etc., global names, since at least one crazily overengineered marshalling system uses them as keys.

Fixes search on devexpress.com support center.

BUG: 255661
FIXED-IN: 4.5.3

svn path=/trunk/KDE/kdelibs/; revision=1191996